--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>¡Tu celular ha sido hackeado!</title>
+    <title>¡GANASTES UN  iPhone 16 Pro!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
